--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,11 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
+  ללמוד לינוקס, האתגרים של מתחיל בלינוקס, ומאמרים לתחילים בלינוקס, הכל מכל כל נמצא כאן.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  nachmenkurtz
+#twitter_username: jekyllrb
+#github_username:  nachmenkurtz
 
 # Build settings
 theme: minima
