--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Learn Linux
-email: nachmenkurtz@gmail.com
+email: blog@nachmenk.com
 description: >- # this means to ignore newlines until "baseurl:"
   Learn Linux - הבלוג.
   ללמוד לינוקס, האתגרים של מתחיל בלינוקס, ומאמרים למתחילים בלינוקס.
